<resources>
    <string name="hint1"><i>UserName</i></string>
    <string name="hint2"><i>Password</i></string>
    <string name="app_name">Chat</string>
    <string name="logInName">UserName</string>
    <string name="logInPassword">Password</string>
    <string name="enterButton">Login</string>
    <string name="logoName">ChitChat</string>
    <string name="logoImage">logoHeart</string>
    <string name="go_to_registerButton">Register</string>
    <string name="create_accountButton">create account</string>
    <string name="full_name_field">Full Name</string>
    <string name="repeat_password_field">repeat Password</string>
    <string name="HomePageTitle">What Can I Say Except You\'re Welcome</string>
    <string name="register_area_title">Let\'s just say you\'re the boss now</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="surprise_toaset">There is nothing here so it is a surprise</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settingsButton">settings</string>
    <string name="title_of_contacts_activity">DoNt meSs wIth My FAM</string>
    <string name="btnSave">save</string>
    <string name="title_of_chat">nickName,did you get my text??</string>
    <string name="send_message">send</string>
    <string name="new_message">new message</string>
    <string name="name_of_contact">Name</string>
    <string name="title_theme_preferences">choose your favorite theme</string>
    <string name="suprise">suprise! click on it...</string>
    <string name="BaseUrl">http://10.0.2.2:5285/api/</string>


</resources>