<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogInActivity"

    >


    <pl.droidsonroids.gif.GifImageView
        android:layout_width="420dp"
        android:layout_height="320dp"
        android:src="@drawable/simp"

        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/buttonSubmitReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:gravity="start"
        android:text="@string/create_accountButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="415dp"
        android:layout_height="619dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/logInName"
            android:inputType="textPersonName"
            android:textColorHint="@color/material_on_background_emphasis_high_type"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/full_name_field"
            android:inputType="textPersonName"
            android:textColorHint="@color/material_on_background_emphasis_high_type"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/logInPassword"
            android:textColorHint="@color/material_on_background_emphasis_high_type"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/ensurePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/repeat_password_field"
            android:textColorHint="@color/material_on_background_emphasis_high_type"
            android:typeface="monospace" />

        <!--        <ImageView-->
        <!--            android:id="@+id/imageView"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="10dp"-->
        <!--            android:padding="10dp"-->
        <!--            app:srcCompat="@drawable/bossbaby" />-->
    </LinearLayout>

    <!--        <EditText-->
    <!--            android:id="@+id/editTextTextMultiLine"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:ems="20"-->
    <!--            android:inputType="textMultiLine"-->
    <!--            android:text="@string/register_area_title"-->
    <!--            android:textAlignment="center"-->
    <!--            android:textColor="@color/teal_700"-->
    <!--            android:textSize="24sp"-->
    <!--            android:textStyle="bold"-->
    <!--            android:typeface="monospace"-->
    <!--            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent" />-->
</androidx.constraintlayout.widget.ConstraintLayout>